# cw_counting_contract

./: Cargo.toml  README.md
schema/: counting_contract.json
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
src/multitest/: contract.rs  tests.rs
