[package]
name = "counting_contract"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.1.5"
cosmwasm-std = "1.1.3"
cw-multi-test = { version = "0.15.1", optional = true }
cw-storage-plus = "0.15.1"
cw2 = "0.16.0"
schemars = "0.8.11"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
counting-contract-0_1 = { path = "../counting_contract", version = "0.1.0", package = "counting_contract", features = ["tests"] }
cw-multi-test = "0.15.1"
